[package]
name = "yummer"
version = "0.1.0"
description = "A Tauri App"
author = [ "Andrii Shafar <andreyshafar@gmail.com>" ]
license = ""
repository = ""
default-run = "yummer"
edition = "2018"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]

[dependencies]
serde_json = "1.0.41"
serde = "1.0"
serde_derive = "1.0"
tiny_http = "0.6"
phf = "0.7.24"
includedir = "0.5.0"
tauri = { version = "0.2.0", features = [ "all-api", "edge" ] }

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "yummer"
path = "src/main.rs"
